@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Generate global elevation map.
+ utils/mapper.c
+Nicolas Weeger, 2008-03-25
+
 Factorize code.
  common/friend.c
 Nicolas Weeger, 2008-03-24
